crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__stats_all_projects__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain stats --all-projects
exit: 0
--- stdout ---
Total: 3
Convention: 1
Decision: 1
Hazard: 1

Embeddings: Not available (run 'engramdb init' to download model)
--- stderr ---
